--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -3,3 +3,40 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --content-primary: #FFFFFF;
+  --content-secondary: #C7C9CC;
+  --content-tertiary: #D9D9D9;
+  --content-brand: #C58DE7;
+  --color-inverse: #030203;
+
+  --background-primary: #020202;
+  --background-secondary: #111012;
+  --background-tertiary: #24222E;
+  --background-brand: #C58DE7;
+  --background-gray: #3D3D3D;
+
+  --accent-pink: #D586E0;
+  --accent-blue: #91A1FA;
+  --accent-green: #77C0AF; 
+  --accent-lime: #D1DC97;
+  --accent-red: #E9A9B3;
+
+  --gradient-border: linear-gradient(to right, #77C0AF 0%, #D1DC97 14.84%, #E9A9B3 32.15%, #D586E0 65.79%, #91A1FA 84.58%);
+  --gradient-background: linear-gradient(to right, #D586E0 0%, #91A1FA 98.93%);
+  --gradient-content: linear-gradient(to right, #C7C9CC 0%, #3D3D3D 100%);
+
+  --display-lg: 800 4.5rem/130% "Sora", sans-serif;
+  --display-md: 800 2.5rem/130% "Sora", sans-serif;
+  --display-sm: 700 2rem/130% "Sora", sans-serif;
+
+  --overline: 700 1rem/150% "Roboto Mono", monospace;
+
+  --parag-lg: 500 1rem/150% "Roboto Flex", sans-serif;
+  --parag-md: 500 0.875rem/150% "Roboto Flex", sans-serif;
+  --parag-sm: 500 0.75rem/150% "Roboto Flex", sans-serif;
+
+  --label-md: 700 1.25rem/150% "Roboto Flex", sans-serif;
+  --label-sm: 700 1rem/150% "Roboto Flex", sans-serif;
+}
