--- a/assets/styles/right.css
+++ b/assets/styles/right.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
 
+  grid-area: AC;
+
   gap: 2rem;
 }
 
@@ -77,23 +79,39 @@
   align-items: center;
 
   gap: 0.5rem;
-  
-  span {
+
+  .toggle{
+    display: flex;
+    align-items: center;
     background-color: var(--content-tertiary);
 
-    display: flex;
-
-    width: 2rem;
+    width: 2.5rem;
+    height: 1.5rem;
 
     border-radius: 1rem;
+
+    transition: background 1000ms;
 
     input {
       display: none;
     }
+
+    img {
+      transition: transform 300ms;
+    }
+
+    
+    &:has(input:checked) {
+      background-image: var(--gradient-background);
+    }
+
+    &:has(input:checked) img {
+      transform: translateX(1rem);
+    }
   }
 
-  label {
-    font: var(--parag-sm);
+  .toggle-legend {
+    font: var(--parag-md);
     color: var(--content-primary);
   }
 }
