--- a/assets/index.css
+++ b/assets/index.css
@@ -1,3 +1,4 @@
 @import url(styles/global.css);
 @import url(styles/left.css);
-@import url(styles/right.css);
+@import url(styles/right-form.css);
+@import url(styles/right-aside.css);
