Adding media queires

--- a/assets/index.css
+++ b/assets/index.css
@@ -2,3 +2,4 @@
 @import url(styles/left.css);
 @import url(styles/right-form.css);
 @import url(styles/right-aside.css);
+@import url(styles/media-queries.css);
